--- a/employ.html
+++ b/employ.html
@@ -87,46 +87,46 @@
     <!-- Page Title -->
     <div class="page-title dark-background" style="background-image: url(assets/img/education/showcase-1.webp);">
       <div class="container position-relative">
-        <h1>Brenitoch Alumni</h1>
-        <p>Celebrating future leaders — building a legacy that starts with our very first graduates.</p>
+        <h1>Employment Opportunities</h1>
+        <p>Teaching. Learning. Living. Growing together as part of the Brenitoch family.</p>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Alumni</li>
+            <li class="current">Employment</li>
           </ol>
         </nav>
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Alumni Section -->
-    <section id="alumni" class="alumni section">
+    <!-- Employment Section -->
+    <section id="employment" class="employment section">
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <!-- Alumni Vision -->
-        <div class="alumni-hero">
+        <!-- Employment Intro -->
+        <div class="employment-hero">
           <div class="row align-items-center">
             <div class="col-lg-7" data-aos="fade-up" data-aos-delay="200">
               <div class="hero-content">
-                <span class="alumni-badge">Brenitoch Legacy</span>
-                <h2>Laying the Foundation for a Lifelong Community</h2>
+                <span class="alumni-badge">Join Our Team</span>
+                <h2>Shape the Future of Education at Brenitoch School</h2>
                 <p>
-                  At Brenitoch School, we believe that education goes far beyond the classroom.
-                  As we prepare to welcome our first students in 2026, we’re already nurturing
-                  the spirit of community, excellence, and lifelong connection that will define
-                  our alumni network for generations to come.
+                  Brenitoch School is more than a place to teach — it’s a place to grow, lead, and inspire.
+                  As we prepare to open our doors to the first generation of learners, we’re building a team
+                  of passionate educators and professionals who share our vision for excellence, creativity,
+                  and holistic development.
                 </p>
                 <div class="alumni-metrics">
                   <div class="metric">
                     <div class="counter">2026</div>
-                    <div class="label">First Graduating Class</div>
+                    <div class="label">Opening Year</div>
                   </div>
                   <div class="metric">
                     <div class="counter">∞</div>
-                    <div class="label">Endless Possibilities</div>
+                    <div class="label">Growth Opportunities</div>
                   </div>
                   <div class="metric">
                     <div class="counter">1</div>
-                    <div class="label">Vision — Lifelong Impact</div>
+                    <div class="label">Vision — Empowering Futures</div>
                   </div>
                 </div>
               </div>
@@ -134,18 +134,19 @@
             <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="300">
               <div class="hero-image-wrapper">
                 <div class="hero-image">
-                  <img src="assets/img/education/campus-5.webp" alt="Future Brenitoch Alumni" class="img-fluid rounded">
+                  <!-- kept original image used on alumni page -->
+                  <img src="assets/img/education/campus-5.webp" alt="Teaching at Brenitoch" class="img-fluid rounded">
                 </div>
               </div>
             </div>
           </div>
         </div>
 
-        <!-- Alumni Vision Section -->
-        <div class="notable-alumni mt-5">
+        <!-- Teaching and Learning Section -->
+        <div class="teaching-living mt-5">
           <div class="section-header text-center" data-aos="fade-up" data-aos-delay="200">
-            <h3>Our Future Alumni</h3>
-            <p>Every Brenitoch student is a future changemaker, innovator, and leader in the making.</p>
+            <h3>Teaching, Learning & Living at Brenitoch</h3>
+            <p>Experience a supportive environment that values growth, innovation, and wellbeing.</p>
           </div>
 
           <div class="row">
@@ -153,21 +154,21 @@
               <div class="alumni-profile">
                 <div class="profile-header">
                   <div class="profile-img">
-                    <img src="assets/img/person/person-f-3.webp" alt="Future Leader" class="img-fluid">
+                    <!-- kept original image used on alumni page -->
+                    <img src="assets/img/person/person-f-3.webp" alt="Teaching Excellence" class="img-fluid">
                   </div>
-                  <div class="profile-year">2026</div>
                 </div>
                 <div class="profile-body">
-                  <h4>Our Founding Students</h4>
-                  <span class="profile-title">The Pioneers of Brenitoch</span>
+                  <h4>Teaching Excellence</h4>
+                  <span class="profile-title">Inspiring Every Learner</span>
                   <p>
-                    The first cohort will set the tone for Brenitoch’s culture —
-                    driven by curiosity, integrity, and a desire to create positive change.
+                    Our educators are innovators — inspiring students through creative, interactive,
+                    and values-based learning that brings out every child’s potential.
                   </p>
                 </div>
                 <div class="achievement-badge">
-                  <i class="bi bi-star-fill"></i>
-                  <span>Founding Class of 2026</span>
+                  <i class="bi bi-lightbulb-fill"></i>
+                  <span>Innovative Classrooms</span>
                 </div>
               </div>
             </div>
@@ -176,21 +177,21 @@
               <div class="alumni-profile">
                 <div class="profile-header">
                   <div class="profile-img">
-                    <img src="assets/img/person/person-m-7.webp" alt="Teacher Mentor" class="img-fluid">
+                    <!-- kept original image used on alumni page -->
+                    <img src="assets/img/person/person-m-7.webp" alt="Professional Growth" class="img-fluid">
                   </div>
-                  <div class="profile-year">2025</div>
                 </div>
                 <div class="profile-body">
-                  <h4>Mentors and Educators</h4>
-                  <span class="profile-title">Guiding the Next Generation</span>
+                  <h4>Professional Growth</h4>
+                  <span class="profile-title">Learning Never Stops</span>
                   <p>
-                    Our teachers and mentors form the foundation of Brenitoch’s
-                    lifelong network — shaping students into confident, compassionate leaders.
+                    At Brenitoch, we invest in continuous professional development — offering workshops,
+                    mentorship, and leadership pathways for all staff members.
                   </p>
                 </div>
                 <div class="achievement-badge">
-                  <i class="bi bi-mortarboard"></i>
-                  <span>Guiding Lights of Brenitoch</span>
+                  <i class="bi bi-journal-richtext"></i>
+                  <span>Career Development</span>
                 </div>
               </div>
             </div>
@@ -199,32 +200,32 @@
               <div class="alumni-profile">
                 <div class="profile-header">
                   <div class="profile-img">
-                    <img src="assets/img/person/person-f-9.webp" alt="Community Parent" class="img-fluid">
+                    <!-- kept original image used on alumni page -->
+                    <img src="assets/img/person/person-f-9.webp" alt="Living at Brenitoch" class="img-fluid">
                   </div>
-                  <div class="profile-year">2025</div>
                 </div>
                 <div class="profile-body">
-                  <h4>Parents & Supporters</h4>
-                  <span class="profile-title">The Brenitoch Family</span>
+                  <h4>Living and Belonging</h4>
+                  <span class="profile-title">A Supportive Community</span>
                   <p>
-                    Every parent, guardian, and supporter who believes in our mission
-                    is part of the Brenitoch legacy — helping shape a better tomorrow.
+                    We believe in work-life balance. Our staff enjoy a vibrant school community,
+                    comfortable living spaces, and meaningful engagement within and beyond campus life.
                   </p>
                 </div>
                 <div class="achievement-badge">
-                  <i class="bi bi-heart-fill"></i>
-                  <span>Community Builders</span>
+                  <i class="bi bi-house-heart-fill"></i>
+                  <span>Work–Life Balance</span>
                 </div>
               </div>
             </div>
           </div>
         </div>
 
-        <!-- Engagement Section -->
-        <div class="alumni-engagement mt-5">
+        <!-- Expectations Section -->
+        <div class="expectations mt-5">
           <div class="section-header text-center" data-aos="fade-up" data-aos-delay="200">
-            <h3>Building a Connected Future</h3>
-            <p>How our students, parents, and partners can shape Brenitoch’s growing legacy.</p>
+            <h3>Professional & Community Expectations</h3>
+            <p>Our culture is built on collaboration, respect, and a shared passion for excellence.</p>
           </div>
 
           <div class="engagement-cards">
@@ -232,64 +233,70 @@
               <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
                 <div class="engagement-card">
                   <div class="card-icon"><i class="bi bi-people-fill"></i></div>
-                  <h4>Become a Founding Partner</h4>
-                  <p>Collaborate with us to create opportunities for our first generation of Brenitoch graduates.</p>
+                  <h4>Team Collaboration</h4>
+                  <p>Work together with dedicated professionals who share a common purpose — student success.</p>
                 </div>
               </div>
 
               <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="400">
                 <div class="engagement-card">
-                  <div class="card-icon"><i class="bi bi-calendar-event"></i></div>
-                  <h4>Launch Events</h4>
-                  <p>Join us in our early community events and see Brenitoch’s story come to life.</p>
+                  <div class="card-icon"><i class="bi bi-award-fill"></i></div>
+                  <h4>Integrity & Excellence</h4>
+                  <p>Uphold Brenitoch’s values of honesty, accountability, and excellence in every task.</p>
                 </div>
               </div>
 
               <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="500">
                 <div class="engagement-card">
-                  <div class="card-icon"><i class="bi bi-gift"></i></div>
-                  <h4>Support Our Mission</h4>
-                  <p>Help us build classrooms, scholarships, and opportunities for future students.</p>
+                  <div class="card-icon"><i class="bi bi-heart-fill"></i></div>
+                  <h4>Community Engagement</h4>
+                  <p>Be part of outreach programs that impact the local community and nurture future citizens.</p>
                 </div>
               </div>
 
               <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="600">
                 <div class="engagement-card">
-                  <div class="card-icon"><i class="bi bi-briefcase"></i></div>
-                  <h4>Volunteer</h4>
-                  <p>Be part of the movement that’s redefining education and youth empowerment in Kenya.</p>
+                  <div class="card-icon"><i class="bi bi-lightning-fill"></i></div>
+                  <h4>Innovation in Practice</h4>
+                  <p>Encourage creativity in teaching, problem-solving, and student interaction every day.</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
 
-        <!-- Impact Banner -->
+        <!-- Call to Action Banner -->
         <div class="impact-banner mt-5" data-aos="fade-up" data-aos-delay="200">
           <div class="row align-items-center">
             <div class="col-lg-6">
               <div class="impact-content">
-                <h3>Together, We Build the Brenitoch Legacy</h3>
+                <h3>Ready to Join Brenitoch?</h3>
                 <p>
-                  The Brenitoch Alumni initiative isn’t just about the past —
-                  it’s about creating a lifelong family that supports education, innovation, and community
-                  transformation.
+                  We’re looking for passionate, qualified individuals eager to make a difference.
+                  Whether you’re an educator, administrator, or support professional,
+                  your journey at Brenitoch will be one of purpose and growth.
                 </p>
-               
+                <div class="impact-buttons">
+                  <a href="#" class="btn-donate">View Open Positions</a>
+                  <a href="mailto:hr@brenitochschool.ac.ke?subject=CV%20Submission%20-%20Employment%20Application" class="btn-learn-more">Submit Your CV <i class="bi bi-arrow-right"></i></a>
+                </div>
               </div>
             </div>
             <div class="col-lg-6">
               <div class="impact-image">
-                <img src="assets/img/education/education-8.webp" alt="Future Brenitoch Students"
-                  class="img-fluid rounded">
-               
+                <!-- kept original image used on alumni page -->
+                <img src="assets/img/education/education-8.webp" alt="Join Brenitoch Team" class="img-fluid rounded">
+                <div class="impact-stat">
+                  <span class="stat-number">#WorkAtBrenitoch</span>
+                  <span class="stat-text">Where passion meets purpose</span>
+                </div>
               </div>
             </div>
           </div>
         </div>
 
       </div>
-    </section><!-- /Alumni Section -->
+    </section><!-- /Employment Section -->
 
   </main>
 
